--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
   <div id="app">
     <div id="chat_container"></div>
     <form action="">
-      <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask me anything..."></textarea>
+      <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask me anything..." autofocus></textarea>
       <button type="submit"><img src="assets/send.svg" alt="Send"></button>
     </form>
   </div>
