--- a/client/index.html
+++ b/client/index.html
@@ -16,13 +16,9 @@
       <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask me anything..." autofocus></textarea>
       <button type="submit"><img src="assets/send.svg" alt="Send"></button>
     </form>
+    <div class="footer">
   </div>
 
   <script type="module" src="script.js"></script>
 </body>
-
-<footer>
-  <p>Developed by <a href="https://www.linkedin.com/in/tbbotchwey/" target="_blank">Thomas Burns Botchwey</a> with OpenAI API</p>
-</footer>
-
 </html>
