--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
       <button type="submit"><img src="assets/send.svg" alt="Send"></button>
     </form>
     <div class="footer">
+      <p>Developed by <a href="https://www.linkedin.com/in/tbbotchwey/" target="_blank">Thomas Burns Botchwey</a> with OpenAI API</p>
+    </div>
   </div>
 
   <script type="module" src="script.js"></script>
