--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GPT Clone</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GPT Clone</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <div id="app">
-    <div id="chat_container"></div>
-    <form action="">
-      <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask me anything..." autofocus></textarea>
-      <button type="submit"><img src="assets/send.svg" alt="Send"></button>
-    </form>
-    <div class="footer">
-      <p>Developed by <a href="https://www.linkedin.com/in/tbbotchwey/" target="_blank">Thomas Burns Botchwey</a> with OpenAI API</p>
+  <body>
+    <div class="alert">
+      <h3>
+        This website is currently not available. I am doing my best to bring it
+        back again. Sorry for any inconvenience and thank you for your
+        understanding.
+      </h3>
     </div>
-  </div>
+    <div id="app">
+      <div id="chat_container"></div>
+      <form action="">
+        <textarea
+          name="prompt"
+          id=""
+          cols="1"
+          rows="1"
+          placeholder="Ask me anything..."
+        ></textarea>
+        <button type="submit"><img src="assets/send.svg" alt="Send" /></button>
+      </form>
+      <div class="footer">
+        <p>
+          Developed by
+          <a href="https://www.linkedin.com/in/tbbotchwey/" target="_blank"
+            >Thomas Burns Botchwey</a
+          >
+          with OpenAI API
+        </p>
+      </div>
+    </div>
 
-  <script type="module" src="script.js"></script>
-</body>
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
