--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,13 @@
   </head>
 
   <body>
-    <div class="alert">
+    <!-- <div class="alert">
       <h3>
         This website is currently not available. I am doing my best to bring it
         back again. Sorry for any inconvenience and thank you for your
         understanding.
       </h3>
-    </div>
+    </div> -->
     <div id="app">
       <div id="chat_container"></div>
       <form action="">
@@ -25,6 +25,7 @@
           cols="1"
           rows="1"
           placeholder="Ask me anything..."
+          autofocus
         ></textarea>
         <button type="submit"><img src="assets/send.svg" alt="Send" /></button>
       </form>
